--- a/NET网络编程/网络编程概念.md
+++ b/NET网络编程/网络编程概念.md
@@ -53,6 +53,115 @@
         客户端案例v02
         服务器程序要求永久运行，一般用死循环处理
         改造的服务器版本vo3
+    TCP编程
+        面向链接的传输，即每次传输之前需要先建立一个链接
+        客户端和服务器端两个程序需要编写
+        Server端的编写流程：
+            1、建立socket负责具体通信，这个socket其实只负责接受对方的请求，真正通信的是链接后重新建立的socket
+            2、绑定端口和地址
+            3、监听接入的访问socket
+            4、接受访问的socket，可以理解接受访问即建立一个通讯的链接通路
+            5、接受对方的发送内容，利用接收到的socket接受内容
+            6、如果有必要，给对方发送反馈信息
+            7、关闭链接通路
+            案例v04
+        Client端编写流程
+            1、建立通信socket
+            2、链接对方，请求跟对方建立通路
+            3、发送内容到对方服务器
+            4、接受对方服务器的反馈
+            5、关闭链接通路
+            案例v05
+    
+# FTP编程
+    FTP（FileTransferProtocal）文件传输协议
+    用途：定制一些特殊的上传下载文件的服务
+    用户分类：登陆FTP服务器必须有一个账号
+        Real账号：注册账号
+        Guest账号：可能临时对某一类人的行为进行授权
+        Anonymous账号：匿名账户，运行任何人
+    FTP工作流程
+        1、客户端链接远程主机上的FTP服务器
+        2、客户端输入用户名和密码（或者anonymous账户和电子邮件地址）
+        3、客户端和服务器进行各种文件传输和信息查询操作
+        4、客户端从远程FTP服务器推出，结束传输
+    FTP文件表示
+        分三段表示FTP服务器上的文件
+        HOST:主机地址，类似于ftp.mozilla.org,以ftp开头
+        DIR: 目录，表示文件所在本地的路径
+        File：文件名称
+        如果像完整精确表示ftp上某一个文件，需要上述三部分组合在一起
+        案例v06
         
+# Mail编程
+    电子邮件的历史
+        1969 Lennard K 教授发给同事 'LO'
+        1971 美国国防部自主的阿帕网（arpanet)的通讯机制
+        通讯地址里用@
+        1987年中国的第一份电子邮件"Across the GreatWall we can reach every conner in the world"
+    管理程序
+        Euroda 使邮件普及
+        Netscape, outlook, forxmail 后来居上
+        Hotmail 使用浏览器发送邮件
+    参考资料
+        官网：https://docs.python.org/3/library/email.mime.html
+    邮件工作流程
+        MUA(MailUserAgent)邮件用户代理
+        MTA(MailTransferAgent)邮件传输代理
+        MDA(MailDeliveryAgent)邮件投递代理
+        流程工作实例
+            laoshi@qq.com 代理老师的邮件
+            xuesheng@sina.com 代表学生的邮件
+            1、MUA->MTA,邮件已经在服务器上了
+            2、qq MTA->........->sina MTA,邮件在新浪的服务器上
+            3、sina MTA->sina MDA,此时邮件已经在你的邮箱里了
+            4、sina MDA->MUA(Foxmail/Outlook),邮件下载到本地电脑
+    编写程序
+        发送： MUA->MTA with SMTP:SimpleMailTransferProtocal，包含MTA->MTA
+        接受： MDA->MUA with POP3 and IMAP：PostOfficeProtocal v3 and InternetMessageAccessProtocal v4
+    准备工作
+        注册邮箱（以qq邮箱为例）
+        第三方邮箱需要特殊设置， 以qq邮箱为例
+            进入设置中心
+            取得授权码
+    Python for mail
+        SMTP协议负责发送邮件
+            使用Email模块构建邮件
+                纯文本邮件
+                案例vo7
+            HTML格式邮件发送
+                准备把HTML代码作为内容
+                把邮件的subtpye设为html
+                发送
+                案例v08
+            发送带附件的邮件
+                可以把邮件看作是一个文本邮件和一个附件的合体
+                一封邮件如果涉及多个部分，需要使用MIMEMultipart格式构建
+                添加一个MIMEText正文
+                添加一个MIMEBase或者MEMEText作为附件
+                案例v09
+            添加邮件头、抄送等信息
+                mail['From']表示发送者信息，包括名和邮件地址
+                mail['To']表示接收者信息，包括名和邮件地址
+                mail['Subject']表示摘要或者主题信息
+                案例v10
+            同时支持html和text格式
+                使用smtplib模块发送邮件
+                构建一个MIMEMultipart格式邮件
+                MIMEMultipart设置成alternative格式
+                添加HTML和text邮件
+                案例v11
+            POP3协议接受邮件
+                本质上是MDA到MUA的一个过程
+                从 MDA下载下来的是一个完整的邮件结构体，需要解析才能得到每个具体可读的内容
+                步骤：
+                    1、用poplib下载邮件结构体原始内容
+                    2、准备相应的内容（邮件地址，密码，POP3实例）
+                    3、身份认证
+                    4、一般会先得到邮箱内邮件的整体列表
+                    5、根据相应序号，得到某一封信的数据流
+                    6、利用解析函数进行解析出相应的邮件结构体
+                    7、用email解析邮件的具体内容
+                案例v12
     
     
